<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/result_bg_img"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/result_bg"
            android:textColor="#773B04"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_result_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/timer_bg"
                android:paddingVertical="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/default_step"
                android:textColor="#C8B4A2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_result_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_result_step"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/timer_bg"
                android:paddingVertical="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/default_time"
                android:textColor="#C8B4A2"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:elevation="12dp"
                android:padding="4dp"
                android:src="@drawable/rank"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:elevation="12dp"
                android:src="@drawable/incorrect"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_correct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:elevation="12dp"
                android:src="@drawable/correct"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:elevation="12dp"
                android:src="@drawable/next"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>